--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@ body{
 	color: #5b7555;
 }
 
+.shadow{
+	text-shadow: 5px 5px 5px #000000;
+}
+
 .heading{
 	padding-top: 30px;
 	padding-bottom: 50px;
@@ -104,3 +108,213 @@ body{
 	padding-left: 50px;
 	font-size: 20px;
 }
+
+
+
+nav{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding: 15px;
+}
+
+.logo{
+	width: 140px;
+}
+
+nav ul li{
+	display: inline-block;
+	list-style-type: none;
+	margin: 10px 10px;
+	transition: transform 0.7s;
+}
+nav ul li:hover{
+	transform: scale(1.5);
+}
+nav ul li a{
+	color: #b3d3a6;
+	text-decoration: none;
+	font-size: 36px;
+	position: relative;
+}
+nav ul li a::after{
+	content: '';
+	width: 0;
+	height: 3px;
+	background: #91af93;
+	position: absolute;
+	left: 0;
+	bottom: -6px;
+	transition: 0.5s;
+}
+nav ul li a::before{
+	font-size: 0;
+	text-align: center;
+	position: absolute;
+	left: 0;
+	bottom: -40px;
+	transition: 0.5s;
+}
+.home::before{
+	content: 'Home';
+}
+.page1::before{
+	content: 'Page 1';
+}
+.page2::before{
+	content: 'Page 2';
+}
+.page3::before{
+	content: 'Page 3';
+}
+.page4::before{
+	content: 'Page 4';
+}
+.about::before{
+	content: 'About';
+}
+nav ul li a:hover::after{
+	width: 100%;
+}
+nav ul li a:hover::before{	
+	font-size: 20px;
+}
+.activenav{
+	color: #7a9e73;
+}
+.activenav:hover::after{
+	width: 0%;
+}
+.activenav:hover::before{
+	font-size: 0;
+}
+
+.header-text{
+	margin-top: 20%;
+	font-size: 30px;
+}
+.header-text h1{
+	font-size: 50px;
+	margin-top: 20px;
+}
+.header-text h1 span{
+	color: #97a984;
+}
+
+/*socials*/
+.socialsrow{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.socials-col-1{
+	flex-basis: 50%;
+}
+.socials-col-1 p{
+	margin-top: 30px;
+}
+.socials-col-1 p i{
+	color: #7c9c79;
+	margin-right: 15px;
+	font-size: 25px;
+	transition: transform 0.5s;
+}
+.socials-col-1 p:hover i{
+	transform: scale(1.2);
+}
+
+.socials-col-2{
+	border-radius: 15px;
+	flex-basis: 40%;
+	overflow: hidden;
+}
+.socials-col-2 img{
+	width: 100%;
+	display: block;
+	transition: transform 0.5s, rotate 0.6s;
+}
+.socials-col-2:hover img{
+	transform: scale(1.2);
+	rotate: -1 1 0 30deg;
+}
+
+.social-icons{
+	margin-top: 30px;
+}
+.social-icons a{
+	text-decoration: none;
+	font-size: 60px;
+	margin-right: 30px;
+	margin-bottom: 30px;
+	color: #cb936b;
+	display: inline-block;
+	transition: transform 0.5s, color 0.5s, scale 0.5s;
+}
+.social-icons a:hover{
+	color: #91eab2;
+	transform: translateY(-5px);
+	scale: 1.1;
+}
+
+.createdby{
+	width: 100%;
+	text-align: center;
+	padding: 25px;
+	background: #674f40;
+	font-weight: 360;
+	margin-top: 20px;
+	;
+}
+.createdby i{
+	color: #91eab2;
+	transition: transform 0.5s, margin 0.5s;
+}
+.createdby:hover i{
+	transform: scale(1.5);
+	margin: 0 5px;
+}
+
+@media only screen and (max-width: 600px){
+	#header{
+		background-image: url("./assets/images/home/phone-background.JPG");
+	}
+	.header-text{
+		margin-top: 100%;
+		font-size: 16px;
+	}
+	.header-text h1{
+		font-size: 30px;
+	}
+	nav ul li a{
+		font-size: 24px;
+	}
+	nav ul li a:hover::before{	
+		font-size: 18px;
+		bottom: -30px;
+	}
+	.sub-title{
+		font-size: 40px;
+	}
+	.about-col-1, .about-col-2{
+		flex-basis: 100%;
+	}
+	.about-col-1{
+		margin-bottom: 30px;
+	}
+	.about-col-2{
+		font-size: 14px;
+	}
+	.tab-links{
+		font-size: 16px;
+		margin-right: 20px;
+	}
+	.socials-col-1, .socials-col-2{
+		flex-basis: 100%;
+	}
+	.createdby{
+		font-size: 14px;
+	}
+}
+
