--- a/style (conflicted).css
+++ b/style (conflicted).css
@@ -1,10 +1,7 @@
 /* fonts */
 /* Geosans Light = body text */
-@font-face {
-	font-family: geosans;
-	src: url("./fonts/GeosansLight.ttf");
-}
 /* Garet = header text*/
+/* Sansation = */
 @font-face {
 	font-family: garet;
 	src: url("./fonts/Garet-Book.ttf");
@@ -14,7 +11,15 @@
 	src: url("./fonts/Garet-Heavy.ttf");
 	font-weight: bold;
 } 
-/* Sansation = label text*/ 
+@font-face {
+	font-family: geosans;
+	src: url("./fonts/GeosansLight.ttf");
+} 
+@font-face {
+	font-family: geosans;
+	src: url("./fonts/GeosansLight-Oblique.ttf");
+	font-style: oblique;
+}
 @font-face {
 	font-family: sansation;
 	src: url("./fonts/Sansation_Regular.ttf");
@@ -29,6 +34,23 @@
 	src: url("./fonts/Sansation_Light.ttf");
 	font-weight: lighter;
 } 
+@font-face {
+	font-family: sansation;
+	src: url("./fonts/Sansation_Italic.ttf");
+	font-style: italic;
+}
+@font-face {
+	font-family: sansation;
+	src: url("./fonts/Sansation_Bold_Italic.ttf");
+	font-weight: bold;
+	font-style: italic;
+} 
+@font-face {
+	font-family: sansation;
+	src: url("./fonts/Sansation_Light_Italic.ttf");
+	font-weight: lighter;
+	font-style: italic;
+}
 
 /* general */
 
@@ -43,7 +65,8 @@ html{
 }
 
 body{
-	font-family: geosans;
+	font-family: garet;
+	font-weight: normal;
 	background: #abba97;
 	color: #5b7555;
 }
@@ -137,16 +160,15 @@ nav ul li a:hover::before{
 /* header */
 
 .header{
+	font-family: quicksand;
 	padding: 15px;
 	margin-top: 20%;
 	font-size: 30px;
 }
 .header h3{
-	font-family: garet;
 	font-size: 20px;
 }
 .header h1{
-	font-family: garet;
 	font-size: 50px;
 	margin-top: 20px;
 }
