--- a/style.css
+++ b/style.css
@@ -137,16 +137,15 @@ nav ul li a:hover::before{
 /* header */
 
 .header{
-	padding: 15px;
-	margin-top: 20%;
+	padding-top: 15px;
+	padding-left: 50px;
+	margin-top: 20px;
 	font-size: 30px;
 }
 .header h3{
-	font-family: garet;
 	font-size: 20px;
 }
 .header h1{
-	font-family: garet;
 	font-size: 50px;
 	margin-top: 20px;
 }
@@ -159,8 +158,11 @@ nav ul li a:hover::before{
 .social{
 	padding: 50px;
 }
+.social h2{
+	font-size: 32px;
+}
 .icons{
-	margin-top: 10px;
+	margin-top: 20px;
 }
 .icons a{
 	text-decoration: none;
