--- a/style.css
+++ b/style.css
@@ -24,11 +24,6 @@
 	src: url("./fonts/Sansation_Bold.ttf");
 	font-weight: bold;
 }
-@font-face {
-	font-family: sansation;
-	src: url("./fonts/Sansation_Light.ttf");
-	font-weight: lighter;
-} 
 
 /* general */
 
@@ -62,7 +57,7 @@ nav ul li{
 	display: inline-block;
 	list-style-type: none;
 	margin: 10px 10px;
-	transition: transform 0.7s;
+	transition: 0.8s;
 }
 nav ul li:hover{
 	transform: scale(1.3);
@@ -72,7 +67,7 @@ nav ul li a{
 	text-decoration: none;
 	font-size: 36px;
 	position: relative;
-	transition: color 0.5s;
+	transition: 0.5s;
 }
 .activenav{
 	color: #61885a;
@@ -137,6 +132,7 @@ nav ul li a:hover::before{
 /* header */
 
 .header{
+	font-family: garet;
 	padding-top: 15px;
 	padding-left: 50px;
 	margin-top: 20px;
@@ -144,13 +140,22 @@ nav ul li a:hover::before{
 }
 .header h3{
 	font-size: 20px;
+	transition: 0.8s;
 }
 .header h1{
-	font-size: 50px;
+	font-size: 36px;
 	margin-top: 20px;
 }
 .header h1 span{
-	color: #97a984;
+	color: #738164;
+	transition: 0.5s;
+}
+.header:hover h3{
+	color: #6f875f;
+}
+.header:hover h1 span{
+	font-size: 48px;
+	margin: 0 10px;
 }
 
 /* social */
@@ -159,43 +164,64 @@ nav ul li a:hover::before{
 	padding: 50px;
 }
 .social h2{
+	font-size: 28px;
+	transition: 0.8s;
+}
+.social h2 .feather{
+	transition: transform 0.8s, margin-right 0.3s;
+}
+.social h2:hover{
 	font-size: 32px;
 }
+.social h2:hover .feather{
+	transform: scale(1.5);
+	margin-right: 10px;
+}
 .icons{
-	margin-top: 20px;
+	margin-top: 15px;
 }
 .icons a{
 	text-decoration: none;
-	font-size: 36px;
-	margin-right: 10px;
-	margin-bottom: 15px;
+	font-size: 48px;
+	margin: 5px 10px;
 	color: #7e9275;
 	display: inline-block;
-	transition: transform 0.5s, color 0.5s, scale 0.5s;
+	transition: 0.5s;
+}
+.icons:hover a{
+	scale: 1.2;
+	margin: 5px 15px;
 }
 .icons a:hover{
 	color: #6d8667;
 	transform: translateY(-5px);
-	scale: 1.1;
+	scale: 1.5;
+	margin: 5px 20px;
 }
 
 /* footer */
 
 .footer{
+	font-family: sansation;
 	width: 100%;
+	font-size: 20px;
 	text-align: center;
 	padding: 25px;
-	background: #6b795c;
+	background: #68755b;
 	font-weight: 360;
 	margin-top: 20px;
 	color: #92ad8d;
+	transition: 0.5s;
 }
 .footer .feather{
 	color: #b6b590;
 	transition: transform 0.5s, margin 0.5s, color 1.2s;
 }
+.footer:hover{
+	font-size: 24px;
+}
 .footer:hover .feather{
 	transform: scale(1.5);
-	margin: 0 5px;
+	margin: 0 12px;
 	color: #a1b474;
 }
