added cards, moved socials to about page

--- a/style.css
+++ b/style.css
@@ -158,25 +158,54 @@ nav ul li a:hover::before{
 	margin: 0 10px;
 }
 
-/* social */
+/* sections */
 
-.social{
+.section{
 	padding: 50px;
 }
-.social h2{
+.section h2{
 	font-size: 28px;
 	transition: 0.8s;
 }
-.social h2 .feather{
+.section h2 .feather{
 	transition: transform 0.8s, margin-right 0.3s;
 }
-.social h2:hover{
+.section h2:hover{
 	font-size: 32px;
 }
-.social h2:hover .feather{
+.section h2:hover .feather{
 	transform: scale(1.5);
 	margin-right: 10px;
 }
+
+/* cards */
+
+.cards{
+	margin-top: 15px;
+	display: flex;
+	flex-wrap: wrap;
+}
+.cards .card{
+	background-color: #5b7555;
+	border-radius: 10px;
+	color: #b8be82;
+	text-decoration: none;
+	margin: 15px;
+	padding: 20px;
+	transition: 0.5s;
+	flex-basis: 30%;
+}
+.cards .card:hover{
+	transform: translateY(-20px);
+	rotate: -1 -1 -1 5deg;
+	margin-top: 25px;
+	scale: 1.02;
+	font-size: 20px;
+}
+
+
+/* icons */
+
 .icons{
 	margin-top: 15px;
 }
@@ -189,7 +218,7 @@ nav ul li a:hover::before{
 	transition: 0.5s;
 }
 .icons:hover a{
-	scale: 1.2;
+	transform: scale(1.2);
 	margin: 5px 15px;
 }
 .icons a:hover{
