--- a/style.css
+++ b/style.css
@@ -178,16 +178,10 @@ nav ul li a:hover::before{
 	margin-right: 10px;
 }
 
-/* cards */
-
-.cards{
-	margin-top: 15px;
-	display: flex;
-	flex-wrap: wrap;
-}
-.cards .card{
+/* tabs + cards ("floats") */
+.float{
 	background-color: #5b7555;
-	border-radius: 10px;
+	border-radius: 20px;
 	color: #b8be82;
 	text-decoration: none;
 	margin: 15px;
@@ -195,12 +189,43 @@ nav ul li a:hover::before{
 	transition: 0.5s;
 	flex-basis: 30%;
 }
-.cards .card:hover{
+.float:hover{
 	transform: translateY(-20px);
 	rotate: -1 -1 -1 5deg;
 	margin-top: 25px;
 	scale: 1.02;
 	font-size: 20px;
+}
+
+/* tabs */
+
+.tabs{
+	margin-top: 15px;
+	display: flex;
+	flex-wrap: wrap;
+}
+.tab{
+	flex-basis: 40%;
+}
+.tab p{
+	margin-bottom: 15px;
+}
+.tab img{
+	border-radius: 15px;
+	filter: brightness(60%);
+	transition: 0.5s;
+}
+.tab:hover img{
+	border-radius: 15px;
+	filter: brightness(100%);
+}
+
+/* cards */
+
+.cards{
+	margin-top: 15px;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 
