--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ nav ul li a:hover::before{
 	margin-right: 10px;
 }
 
-/* floats (tabs + cards)*/
+/* floats (lists + tabs + cards)*/
 
 .float{
 	background-color: #5b7555;
@@ -196,6 +196,20 @@ nav ul li a:hover::before{
 	margin-top: 25px;
 	scale: 1.02;
 	font-size: 20px;
+}
+
+/* lists */
+
+.lists{
+	margin-top: 15px;
+	display: flex;
+	flex-wrap: wrap;
+}
+.list{
+	flex-basis: 20%;
+}
+.list:hover{
+	font-size: 16px;
 }
 
 /* tabs */
