--- a/style.css
+++ b/style.css
@@ -217,9 +217,11 @@ nav ul li a:hover::before{
 .txt{
 	padding: 15px;
 	transition: 0.5s;
+	text-decoration: none;
+	color: #5b7555;
 }
 .txt:hover{
-	transform: scale(1.1);
+	transform: scale(1.05);
 }
 
 /* tabs */
