--- a/style.css
+++ b/style.css
@@ -198,6 +198,18 @@ nav ul li a:hover::before{
 	font-size: 20px;
 }
 
+/* txt */
+
+.txt{
+	padding: 15px;
+	transition: 0.5s;
+	text-decoration: none;
+	color: #5b7555;
+}
+.txt:hover{
+	transform: scale(1.05);
+}
+
 /* lists */
 
 .lists{
@@ -210,18 +222,6 @@ nav ul li a:hover::before{
 }
 .list:hover{
 	font-size: 16px;
-}
-
-/* txt */
-
-.txt{
-	padding: 15px;
-	transition: 0.5s;
-	text-decoration: none;
-	color: #5b7555;
-}
-.txt:hover{
-	transform: scale(1.05);
 }
 
 /* tabs */
@@ -256,6 +256,9 @@ nav ul li a:hover::before{
 	margin-top: 15px;
 	display: flex;
 	flex-wrap: wrap;
+}
+.card{
+	flex-basis: 30%;
 }
 
 
