--- a/style.css
+++ b/style.css
@@ -261,6 +261,35 @@ nav ul li a:hover::before{
 	flex-basis: 30%;
 }
 
+/* timeline */
+
+.timeline{
+	margin-top: 20px;
+}
+.point{
+	margin: 15px;
+	margin-bottom: 25px;
+	transition: 0.5s;
+}
+.point .feather{
+	display: inline-block;
+	transition: 0.35s;
+	transform: translateY(-5px);
+	margin-right: 10px;
+}
+.point .ptext{
+	display: inline-block;
+}
+.point:hover{
+	transform: translateX(20px);
+	scale: 1.02;
+	font-size: 20px;
+}
+.point:hover .feather{
+	margin-right: 15px;
+	scale: 1.2;
+}
+
 /* icons */
 
 .inline{
