--- a/style.css
+++ b/style.css
@@ -178,12 +178,43 @@ nav ul li a:hover::before{
 	margin-right: 10px;
 }
 
+/* boxed sections */
+
+.bx-section{
+	margin: 30px;
+	padding: 10px;
+	border-radius: 20px;
+	background-color: #b6c4a4;
+	transition: 0.5s;
+	justify-content: center;
+}
+.bx-section:hover{
+	transform: scale(1.02);
+	background-color: #cdddbd;
+}
+.bx-section h2{
+	margin-top: 15px;
+	margin-left: 10px;
+	font-size: 28px;
+	transition: 0.8s;
+}
+.bx-section h2 .feather{
+	transition: transform 0.8s, margin-right 0.3s;
+}
+.bx-section h2:hover{
+	font-size: 32px;
+}
+.bx-section h2:hover .feather{
+	transform: scale(1.5);
+	margin-right: 10px;
+}
+
 /* floats (lists + tabs + cards)*/
 
 .float{
-	background-color: #5b7555;
+	background-color: #b6c4a4;
 	border-radius: 20px;
-	color: #b8be82;
+	color: #73846a;
 	text-decoration: none;
 	margin: 15px;
 	padding: 20px;
@@ -191,6 +222,7 @@ nav ul li a:hover::before{
 	flex-basis: 30%;
 }
 .float:hover{
+	background-color: #cdddbd;
 	transform: translateY(-20px);
 	rotate: -1 -1 -1 5deg;
 	margin-top: 25px;
@@ -239,7 +271,7 @@ nav ul li a:hover::before{
 }
 .tab img{
 	border-radius: 15px;
-	filter: brightness(60%);
+	filter: brightness(80%);
 	transition: 0.5s;
 }
 .tab:hover img{
