added amazon rainforest page with images

--- a/style.css
+++ b/style.css
@@ -209,6 +209,11 @@ nav ul li a:hover::before{
 	margin-right: 10px;
 }
 
+/* center */
+.center{
+	text-align: center;
+}
+
 /* floats (lists + tabs + cards)*/
 
 .float{
@@ -255,6 +260,9 @@ nav ul li a:hover::before{
 .list:hover{
 	font-size: 16px;
 }
+.list h3{
+	margin-bottom: 5px;	
+}
 
 /* tabs */
 
@@ -273,6 +281,8 @@ nav ul li a:hover::before{
 	border-radius: 15px;
 	filter: brightness(80%);
 	transition: 0.5s;
+	width: 600px;
+	height: 400px;
 }
 .tab:hover img{
 	border-radius: 15px;
