finished rainforest page, added boxicons, adjusted bx-section floats, added big-list

--- a/style.css
+++ b/style.css
@@ -221,7 +221,8 @@ nav ul li a:hover::before{
 	border-radius: 20px;
 	color: #73846a;
 	text-decoration: none;
-	margin: 15px;
+	/* margin: 15px; */
+	margin: 0.75%;
 	padding: 20px;
 	transition: 0.5s;
 	flex-basis: 30%;
@@ -233,6 +234,12 @@ nav ul li a:hover::before{
 	margin-top: 25px;
 	scale: 1.02;
 	font-size: 20px;
+}
+.bx-section:hover .float{
+	background-color: #d4e0c5;
+}
+.bx-section:hover .float:hover{
+	background-color: #cdddbd;
 }
 
 /* txt */
@@ -262,6 +269,9 @@ nav ul li a:hover::before{
 }
 .list h3{
 	margin-bottom: 5px;	
+}
+.big-list{
+	flex-basis: 42.25%;
 }
 
 /* tabs */
