added paint cycle multipicture

--- a/style.css
+++ b/style.css
@@ -33,12 +33,17 @@
 	50%		{filter: brightness(30%);}
 	100%	{filter: brightness(30%);}
 }
-
 @keyframes fuzzy {
 	0%		{filter: blur(0);}
 	25%		{filter: blur(0);}
 	50%		{filter: blur(15px);}
 	100%	{filter: blur(15px);}
+}
+@keyframes paint {
+	0%		{filter: grayscale(0)}
+	25%		{filter: grayscale(0);}
+	50%		{filter: grayscale(80%);}
+	100%	{filter: grayscale(80%);}
 }
 
 /* general */
@@ -434,6 +439,13 @@ nav ul li a:hover::before{
 .multipicture.fuzzy .cycle4{
 	filter: blur(15px);
 	animation-name: fuzzy;
+}
+.multipicture.paint .cycle1,
+.multipicture.paint .cycle2,
+.multipicture.paint .cycle3,
+.multipicture.paint .cycle4{
+	filter: grayscale(80%);
+	animation-name: paint;
 }
 /* slide */
 .multipicture .slide1, 
