--- a/style.css
+++ b/style.css
@@ -156,6 +156,9 @@ nav ul li a:hover::before{
 .about::before{
 	content: 'About';
 }
+.example::before{
+	content: 'About';
+}
 .activenav:hover::before{
 	/* activenav does not have text effect */
 	font-size: 0;
